# file2cpp

./: .gitignore  CMakeLists.txt  Res.cpp  main.cpp
.github/workflows/: Build.yml  Release.yml
res/: CMakeCache.txt  DartConfiguration.tcl  compile_commands.json
